worked on explosion example

--- a/examples/explode/index.html
+++ b/examples/explode/index.html
@@ -22,10 +22,10 @@
         <div class='example'>
             <h1>Triangulated Helvetica</h1>
             <a href='../' class='back-btn'>&larr; BACK</a>
-            <h2>Coloring individual triangles randomly</h2>
-            <div class='app-btn' id='change-color-btn'>CHANGE COLORS</div>
+            <h2>Exploding letters</h2>
+            <div class='app-btn' id='explode-letters-btn'>Explode</div><div class='app-btn' id='explode-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
-                <canvas id='example1' data-processing-sources="../../src/ExampleOne.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
+                <canvas id='example3' data-processing-sources="../../src/ExampleThree.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
             </div>
         </div>
     </body>
