started exmaples homepage

--- a/examples/draggable/index.html
+++ b/examples/draggable/index.html
@@ -7,7 +7,7 @@
     <head>
         <title>Helvetica</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name='description' content='Processing JS'>
+        <meta name='description' content='Triangulated Helvetica'>
         <script type='text/javascript' src='../../assets/js/lib/hidpi-canvas.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/jquery-2.0.3.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/processing-1.4.1.js'></script>
@@ -21,8 +21,9 @@
     <body>
         <div class='example'>
             <h1>Triangulated Helvetica</h1>
-            <a href='../' class='back-btn'>&larr; BACK</a>
+            <a href='../../' class='back-btn'>&larr; BACK</a>
             <h2>Adding physics (drag the points)</h2>
+            <div class='app-btn' id='reset-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
                 <canvas id='example2' data-processing-sources="../../src/ExampleTwo.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
             </div>
