--- a/examples/explode/index.html
+++ b/examples/explode/index.html
@@ -7,7 +7,7 @@
     <head>
         <title>Helvetica</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name='description' content='Processing JS'>
+        <meta name='description' content='Triangulated Helvetica'>
         <script type='text/javascript' src='../../assets/js/lib/hidpi-canvas.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/jquery-2.0.3.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/processing-1.4.1.js'></script>
@@ -23,7 +23,7 @@
             <h1>Triangulated Helvetica</h1>
             <a href='../' class='back-btn'>&larr; BACK</a>
             <h2>Exploding letters</h2>
-            <div class='app-btn' id='explode-letters-btn'>Explode</div><div class='app-btn' id='explode-letters-btn'>Reset</div>
+            <div class='app-btn' id='explode-letters-btn'>Explode</div><div class='app-btn' id='reset-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
                 <canvas id='example3' data-processing-sources="../../src/ExampleThree.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
             </div>
