--- a/examples/multicolored/index.html
+++ b/examples/multicolored/index.html
@@ -7,7 +7,7 @@
     <head>
         <title>Helvetica</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name='description' content='Processing JS'>
+        <meta name='description' content='Triangulated Helvetica'>
         <script type='text/javascript' src='../../assets/js/lib/hidpi-canvas.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/jquery-2.0.3.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/processing-1.4.1.js'></script>
