updated examples page

--- a/examples/draggable/index.html
+++ b/examples/draggable/index.html
@@ -21,7 +21,7 @@
     <body>
         <div class='example'>
             <h1>Triangulated Helvetica</h1>
-            <a href='../../' class='back-btn'>&larr; BACK</a>
+            <a href='../' class='back-btn'>&larr; BACK</a>
             <h2>Adding physics (drag the points)</h2>
             <div class='app-btn' id='reset-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
