--- a/examples/explode/index.html
+++ b/examples/explode/index.html
@@ -5,7 +5,7 @@
 <!--[if IE 9 ]>    <html class='ie9'> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang='en'> <!--<![endif]-->
     <head>
-        <title>Helvetica</title>
+        <title>Triangulated Helvetica</title>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name='description' content='Triangulated Helvetica'>
         <script type='text/javascript' src='../../assets/js/lib/hidpi-canvas.js'></script>
