updated examples page

--- a/examples/draggable/index.html
+++ b/examples/draggable/index.html
@@ -23,6 +23,9 @@
             <h1>Triangulated Helvetica</h1>
             <a href='../' class='back-btn'>&larr; BACK</a>
             <h2>Adding physics (drag the points)</h2>
+            <div class='download-btn-wrapper'>
+                <a class='app-btn' id='download-on-github-btn' href='https://github.com/mikefey/triangulated-helvetica' target='_blank'>Download on Github &rarr;</a>
+            </div>
             <div class='app-btn' id='reset-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
                 <canvas id='example2' data-processing-sources="../../src/ExampleTwo.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
