--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,9 @@
         <div class='description'>
             <h1>Triangulated Helvetica</h1>
             <p>Eperimentation with triangulation and Helvetica. The examples below use <a href='http://processingjs.org/' target='_blank'>processing.js</a>, but the graphics could be rendered using any method.</p>
+            <div class='download-btn-wrapper'>
+                <a class='app-btn' id='download-on-github-btn' href='https://github.com/mikefey/triangulated-helvetica' target='_blank'>Download on Github &rarr;</a>
+            </div>
             <h2>Examples:</h2>
             <div class='example-description'>
                 <div class='title-wrapper'>
