--- a/examples/multicolored/index.html
+++ b/examples/multicolored/index.html
@@ -23,6 +23,9 @@
             <h1>Triangulated Helvetica</h1>
             <a href='../' class='back-btn'>&larr; BACK</a>
             <h2>Coloring individual triangles randomly</h2>
+            <div class='download-btn-wrapper'>
+                <a class='app-btn' id='download-on-github-btn' href='https://github.com/mikefey/triangulated-helvetica' target='_blank'>Download on Github &rarr;</a>
+            </div>
             <div class='app-btn' id='change-color-btn'>CHANGE COLORS</div>
             <div class='canvas-wrapper'>
                 <canvas id='example1' data-processing-sources="../../src/ExampleOne.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
