updated example page

--- a/examples/draggable/index.html
+++ b/examples/draggable/index.html
@@ -5,10 +5,10 @@
 <!--[if IE 9 ]>    <html class='ie9'> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang='en'> <!--<![endif]-->
     <head>
-        <title>Helvetica</title>
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name='description' content='Triangulated Helvetica'>
-        <script type='text/javascript' src='../../assets/js/lib/hidpi-canvas.js'></script>
+        <title>Mike Fey | Triangulated Helvetica</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name='apple-mobile-web-app-capable' content='yes' />
+        <meta name='description' content='Eperimentation with triangulation and Helvetica.'>
         <script type='text/javascript' src='../../assets/js/lib/jquery-2.0.3.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/processing-1.4.1.js'></script>
         <script type='text/javascript' src='../../assets/js/lib/toxiclibs.js'></script>
