updated folder structure

--- a/draggable/index.html
+++ b/draggable/index.html
@@ -9,14 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name='apple-mobile-web-app-capable' content='yes' />
         <meta name='description' content='Eperimentation with triangulation and Helvetica.'>
-        <script type='text/javascript' src='../../assets/js/lib/jquery-2.0.3.js'></script>
-        <script type='text/javascript' src='../../assets/js/lib/processing-1.4.1.js'></script>
-        <script type='text/javascript' src='../../assets/js/lib/toxiclibs.js'></script>
-        <script type='text/javascript' src='../../assets/js/lib/Tween.js'></script>
-        <script type='text/javascript' src='../../assets/js/lib/poly2tri.js'></script>
-        <script type='text/javascript' src='../../assets/js/lib/TriangulatedHelvetica.js'></script>
-        <script type='text/javascript' src='../../assets/js/main.js'></script>
-        <link rel='stylesheet' href='../../assets/css/style.css' />
+        <script type='text/javascript' src='../assets/js/lib/jquery-2.0.3.js'></script>
+        <script type='text/javascript' src='../assets/js/lib/processing-1.4.1.js'></script>
+        <script type='text/javascript' src='../assets/js/lib/toxiclibs.js'></script>
+        <script type='text/javascript' src='../assets/js/lib/Tween.js'></script>
+        <script type='text/javascript' src='../assets/js/lib/poly2tri.js'></script>
+        <script type='text/javascript' src='../assets/js/lib/TriangulatedHelvetica.js'></script>
+        <script type='text/javascript' src='../assets/js/main.js'></script>
+        <link rel='stylesheet' href='../assets/css/style.css' />
     </head>
     <body>
         <div class='example'>
@@ -28,7 +28,7 @@
             </div>
             <div class='app-btn' id='reset-letters-btn'>Reset</div>
             <div class='canvas-wrapper'>
-                <canvas id='example2' data-processing-sources="../../src/ExampleTwo.pde ../../src/Letter.pde ../../src/LetterPoint.pde ../../src/lib/MouseUtils.pde"></canvas>
+                <canvas id='example2' data-processing-sources="../src/ExampleTwo.pde ../src/Letter.pde ../src/LetterPoint.pde ../src/lib/MouseUtils.pde"></canvas>
             </div>
         </div>
     </body>
