--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name='apple-mobile-web-app-capable' content='yes' />
         <meta name='description' content='Eperimentation with triangulation and Helvetica.'>
-        <link rel='stylesheet' href='../assets/css/style.css' />
-        <link rel="stylesheet" href="../assets/css/highlight.min.css">
-        <script src="../assets/js/lib/highlight.pack.js"></script>
+        <link rel='stylesheet' href='assets/css/style.css' />
+        <link rel="stylesheet" href="assets/css/highlight.min.css">
+        <script src="assets/js/lib/highlight.pack.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
         <script type="text/javascript">
             var _gaq = _gaq || [];
@@ -37,19 +37,19 @@
                 <div class='title-wrapper'>
                     <h3>Randomly coloring triangles</h3><a href='multicolored' class='back-btn'>VIEW EXAMPLE</a>
                 </div>
-                <a class='example-image' href='multicolored'><img id='color-image' src='../assets/images/color.jpg' /></a>
+                <a class='example-image' href='multicolored'><img id='color-image' src='assets/images/color.jpg' /></a>
             </div>
             <div class='example-description'>
                 <div class='title-wrapper'>
                     <h3>Adding physics with Toxiclibs</h3><a href='draggable' class='back-btn'>VIEW EXAMPLE</a>
                 </div>
-                <a class='example-image' href='draggable'><img id='draggable-image' src='../assets/images/draggable.jpg' /></a>
+                <a class='example-image' href='draggable'><img id='draggable-image' src='assets/images/draggable.jpg' /></a>
             </div>
             <div class='example-description'>
                 <div class='title-wrapper'>
                     <h3>Exploding Letters</h3><a href='explode' class='back-btn'>VIEW EXAMPLE</a>
                 </div>
-                <a class='example-image' href='explode'><img id='explode-image' src='../assets/images/explode.jpg' /></a>
+                <a class='example-image' href='explode'><img id='explode-image' src='assets/images/explode.jpg' /></a>
             </div>
             <h2>Usage:</h2>
             <p>Requires <a href='https://github.com/r3mi/poly2tri.js' target='_blank'>poly2tri.js</a>. Currently only supports captital letters A-Z, support for more characters coming soon.</p>
